# cppbackend

./: README.md
.github/workflows/: main.yml
lessons/http_server_lesson9/: README.md  main.cpp
lessons/http_server_lesson9_1/: README.md  main.cpp  server
lessons/http_server_lesson9_2/: README.md  main.cpp
lessons/http_server_lesson9_3/: CMakeLists.txt  README.md  main.cpp
lessons/http_server_lesson9_4/: README.md  main.cpp
lessons/lesson03_asio/: CMakeLists.txt
lessons/lesson03_asio/src/: main.cpp
lessons/lesson04_asio_lifetime_0/: CMakeLists.txt
lessons/lesson04_asio_lifetime_1/: CMakeLists.txt
lessons/lesson04_asio_lifetime_2/: CMakeLists.txt
lessons/lesson04_asio_lifetime_3/: CMakeLists.txt
lessons/lesson04_asio_lifetime_3/src/: main.cpp
lessons/lesson04_asio_lifetime_4/: CMakeLists.txt
lessons/lesson04_asio_lifetime_5/: CMakeLists.txt
lessons/lesson04_asio_lifetime_5/src/: main.cpp
lessons/lesson04_asio_lifetime_6/: CMakeLists.txt
lessons/lesson04_asio_lifetime_7/: CMakeLists.txt
lessons/lesson04_asio_lifetime_8/: CMakeLists.txt
lessons/sprint_18_20_theme_1_4_lesson_3_10_static_files/: CMakeLists.txt  README.md
lessons/sprint_18_20_theme_1_4_lesson_3_10_static_files/src/: main.cpp
lessons/sprint_18_20_theme_1_4_lesson_3_10_static_files/static/: index.html
lessons/sprint_18_20_theme_1_4_lesson_3_10_static_files_part2/: README.md
lessons/sprint_18_20_theme_1_4_lesson_3_10_static_files_part3/: README.md
lessons/sprint_18_20_theme_1_4_lesson_3_10_static_files_part4/: README.md  secret.txt
lessons/sprint_18_20_theme_1_4_lesson_3_10_static_files_part5/: README.md
lessons/sprint_18_20_theme_1_4_lesson_5_10_logging_patterns_part1/: CMakeLists.txt  README.md
lessons/sprint_18_20_theme_1_4_lesson_5_10_logging_patterns_part2/: CMakeLists.txt  README.md
lessons/sprint_18_20_theme_1_4_lesson_5_10_logging_patterns_part3/: CMakeLists.txt  README.md
lessons/sprint_18_20_theme_1_4_lesson_5_10_logging_patterns_part4/: CMakeLists.txt  README.md
lessons/sprint_18_20_theme_1_4_lesson_5_10_logging_patterns_part5/: CMakeLists.txt  README.md
lessons/sprint_18_20_theme_1_4_lesson_6_10_conan/: CMakeLists.txt  README.md  boost_packages.html
lessons/sprint_18_20_theme_1_4_lesson_6_10_conan/build-release/: conanbuildinfo.txt  conanbuildinfo_multi.cmake  conanbuildinfo_release.cmake  hello
lessons/sprint_18_20_theme_1_4_lesson_6_10_conan/src/: main.cpp
lessons/sprint_18_20_theme_1_4_lesson_7_10_boost_log/: CMakeLists.txt  README.md
lessons/sprint_18_20_theme_1_4_lesson_7_10_boost_log/src/: main.cpp
lessons/sprint_18_20_theme_1_4_lesson_8_10_cron/: README.md
lessons/sprint_18_20_theme_1_4_lesson_9_10_log_rotation/: README.md
lessons/sprint_18_20_theme_2_4_lesson_2_5_prometheus_metrics/: README.md
lessons/sprint_18_20_theme_2_4_lesson_3_5_promql_grafana/: README.md
lessons/sprint_18_20_theme_2_4_lesson_4_5_golden_metrics/: README.md
lessons/sprint_18_20_theme_3_4_lesson_2_10_game_server_architecture/: README.md
lessons/sprint_18_20_theme_3_4_lesson_7_10_program_options/: CMakeLists.txt  README.md
lessons/sprint_18_20_theme_3_4_lesson_7_10_program_options/src/: merge.cpp
lessons/web_server_lesson10_3/: README.md
lessons/web_server_lesson10_4/: README.md  main.cpp
lessons/web_server_lesson_10_0/: README.md  main.cpp
lessons/web_server_lesson_10_0_1/: README.md  main.cpp
lessons/web_server_lesson_10_1/: README.md  main.cpp
lessons/web_server_lesson_10_10/: README.md  main.cpp
lessons/web_server_lesson_10_11/: README.md  main.cpp
lessons/web_server_lesson_10_12/: README.md  main.cpp
lessons/web_server_lesson_10_13/: README.md  main.cpp
lessons/web_server_lesson_10_14/: README.md  main.cpp
lessons/web_server_lesson_10_15/: README.md
lessons/web_server_lesson_10_16/: README.md  main.cpp
lessons/web_server_lesson_10_17/: README.md
lessons/web_server_lesson_10_18/: README.md  main.cpp
lessons/web_server_lesson_10_19/: README.md
lessons/web_server_lesson_10_2/: README.md  main.cpp
lessons/web_server_lesson_10_20/: README.md  main.cpp
lessons/web_server_lesson_10_21/: README.md  main.cpp
lessons/web_server_lesson_10_3/: README.md  main.cpp
lessons/web_server_lesson_10_4/: CMakeLists.txt  README.md  conanfile.txt
lessons/web_server_lesson_10_5/: README.md  main.cpp
lessons/web_server_lesson_10_6/: README.md  main.cpp
lessons/web_server_lesson_10_7/: README.md  main.cpp
lessons/web_server_lesson_11/: CMakeLists.txt  README.md  main.cpp
lessons/web_server_lesson_13/: CMakeLists.txt  README.md  conanfile.txt
lessons/web_server_lesson_13/src/: demo1_parallel_timers.cpp  demo2_strand_timers.cpp  demo3_order_race.cpp  demo4_order_strand.cpp
lessons/web_server_lesson_14/: CMakeLists.txt  README.md
lessons/web_server_lesson_14/src/: demo1_post_single_thread.cpp  demo2_post_other_thread.cpp  demo3_post_multi_thread.cpp  demo4_strand_order.cpp  demo5_output_order.cpp
lessons/web_server_lesson_15/: CMakeLists.txt  README.md
lessons/web_server_lesson_15/src/: demo1_thread_pool_defer.cpp  demo2_thread_pool_post.cpp  demo3_io_context_defer.cpp
lessons/web_server_lesson_16/: CMakeLists.txt  README.md  conanfile.txt
lessons/web_server_lesson_16/src/: demo1_dispatch_basic.cpp  demo2_dispatch_io1_io2_strand.cpp  demo3_quiz_letters.cpp  demo4_abc_order.cpp  demo5_def_order.cpp  demo6_same_strand.cpp  demo7_same_strand_answer.cpp  demo8_two_strands.cpp
lessons/web_server_lesson_17/: CMakeLists.txt  README.md
lessons/web_server_lesson_17/src/: common.h  demo1_signal_set_shutdown.cpp  demo2_server_architecture_stub.cpp  demo3_async_accept_stub.cpp
lessons/web_server_lesson_18/: CMakeLists.txt  README.md
lessons/web_server_lesson_18/src/: common.h  http_server.h  main.cpp
sprint1/: README.md
sprint1/problems/radio/solution_wsl_5s/: CMakeLists.txt  README.md
sprint1/problems/radio/solution_wsl_5s/src/: main.cpp
sprint1/samples/tcp-udp/: CMakeLists.txt  tcp_client.cpp  udp_client.cpp  udp_server.cpp
sprint2/problems/logger/solution/: CMakeLists.txt  README.md  main.cpp  my_logger.h
(+149 files in other folders)
