cmake_minimum_required(VERSION 3.11)

project(Radio CXX)
set(CMAKE_CXX_STANDARD 20)
set(CMAKE_CXX_STANDARD_REQUIRED ON)

include(${CMAKE_BINARY_DIR}/conanbuildinfo.cmake)
conan_basic_setup()

find_package(Boost 1.78.0 REQUIRED)

set(THREADS_PREFER_PTHREAD_FLAG ON)
find_package(Threads REQUIRED)

if(WIN32)
  add_definitions(-DNOMINMAX)
endif()

add_executable(radio
    src/main.cpp
)

target_include_directories(radio PRIVATE
    ${Boost_INCLUDE_DIRS}
)

target_link_libraries(radio PRIVATE
    Threads::Threads
)
